// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OsirisRequestAdapter toApplicationFlat nullify idVersement if EJ is missing 1`] = `
{
  "allocatorId": null,
  "allocatorIdType": null,
  "allocatorName": null,
  "applicationId": "osiris-DD71-24-0094",
  "applicationProviderId": "DD71-24-0094",
  "beneficiaryEstablishmentId": "10000000000001",
  "beneficiaryEstablishmentIdType": "siret",
  "budgetaryYear": 2022,
  "cofinancersIdType": null,
  "cofinancersNames": [
    "CAF",
    "ARS",
    "DRAC",
  ],
  "cofinancingRequested": true,
  "confinancersId": null,
  "conventionDate": null,
  "decisionDate": 2022-01-01T00:00:00.000Z,
  "decisionReference": null,
  "depositDate": 2025-08-04T00:00:00.000Z,
  "ej": null,
  "grantedAmount": undefined,
  "idRAE": null,
  "instructiveDepartementId": null,
  "instructiveDepartmentIdType": null,
  "instructiveDepartmentName": undefined,
  "joinKeyDesc": "N° dossier de l'outil "Le Compte Asso". Il permet de faire un lien entre la requête OSIRIS et le dossier du Compte Asso.",
  "joinKeyId": "LE_COMPTE_ASSO_ID",
  "managingAuthorityId": null,
  "managingAuthorityIdType": null,
  "managingAuthorityName": null,
  "nature": "Aide en numéraire",
  "object": "",
  "paymentCondition": null,
  "paymentConditionDesc": null,
  "paymentId": null,
  "paymentPeriodDates": null,
  "pluriannual": false,
  "pluriannualYears": [
    2022,
    2023,
    2024,
    2025,
  ],
  "provider": "osiris",
  "requestYear": 2025,
  "requestedAmount": undefined,
  "scheme": undefined,
  "statusLabel": "NORMALIZED_LABEL",
  "subScheme": undefined,
  "subventionPercentage": null,
  "totalAmount": null,
  "ueNotification": null,
  "uniqueId": "osiris-DD71-24-0094-2022",
  "updateDate": 2025-01-01T00:00:00.000Z,
}
`;

exports[`OsirisRequestAdapter toApplicationFlat returns application flat with date from object id 1`] = `
{
  "allocatorId": null,
  "allocatorIdType": null,
  "allocatorName": null,
  "applicationId": "osiris-DD71-24-0094",
  "applicationProviderId": "DD71-24-0094",
  "beneficiaryEstablishmentId": "10000000000001",
  "beneficiaryEstablishmentIdType": "siret",
  "budgetaryYear": 2022,
  "cofinancersIdType": null,
  "cofinancersNames": [
    "CAF",
    "ARS",
    "DRAC",
  ],
  "cofinancingRequested": true,
  "confinancersId": null,
  "conventionDate": null,
  "decisionDate": 2022-01-01T00:00:00.000Z,
  "decisionReference": null,
  "depositDate": 2025-08-04T00:00:00.000Z,
  "ej": "EJ00001",
  "grantedAmount": undefined,
  "idRAE": null,
  "instructiveDepartementId": null,
  "instructiveDepartmentIdType": null,
  "instructiveDepartmentName": undefined,
  "joinKeyDesc": "N° dossier de l'outil "Le Compte Asso". Il permet de faire un lien entre la requête OSIRIS et le dossier du Compte Asso.",
  "joinKeyId": "LE_COMPTE_ASSO_ID",
  "managingAuthorityId": null,
  "managingAuthorityIdType": null,
  "managingAuthorityName": null,
  "nature": "Aide en numéraire",
  "object": "",
  "paymentCondition": null,
  "paymentConditionDesc": null,
  "paymentId": "10000000000001-EJ00001-2022",
  "paymentPeriodDates": null,
  "pluriannual": false,
  "pluriannualYears": [
    2022,
    2023,
    2024,
    2025,
  ],
  "provider": "osiris",
  "requestYear": 2025,
  "requestedAmount": undefined,
  "scheme": undefined,
  "statusLabel": "NORMALIZED_LABEL",
  "subScheme": undefined,
  "subventionPercentage": null,
  "totalAmount": null,
  "ueNotification": null,
  "uniqueId": "osiris-DD71-24-0094-2022",
  "updateDate": 2025-01-01T00:00:00.000Z,
}
`;

exports[`OsirisRequestAdapter toApplicationFlat returns application flat with default date 1`] = `
{
  "allocatorId": null,
  "allocatorIdType": null,
  "allocatorName": null,
  "applicationId": "osiris-DD71-24-0094",
  "applicationProviderId": "DD71-24-0094",
  "beneficiaryEstablishmentId": "10000000000001",
  "beneficiaryEstablishmentIdType": "siret",
  "budgetaryYear": 2022,
  "cofinancersIdType": null,
  "cofinancersNames": [
    "CAF",
    "ARS",
    "DRAC",
  ],
  "cofinancingRequested": true,
  "confinancersId": null,
  "conventionDate": null,
  "decisionDate": 2022-01-01T00:00:00.000Z,
  "decisionReference": null,
  "depositDate": 2025-08-04T00:00:00.000Z,
  "ej": "EJ00001",
  "grantedAmount": undefined,
  "idRAE": null,
  "instructiveDepartementId": null,
  "instructiveDepartmentIdType": null,
  "instructiveDepartmentName": undefined,
  "joinKeyDesc": "N° dossier de l'outil "Le Compte Asso". Il permet de faire un lien entre la requête OSIRIS et le dossier du Compte Asso.",
  "joinKeyId": "LE_COMPTE_ASSO_ID",
  "managingAuthorityId": null,
  "managingAuthorityIdType": null,
  "managingAuthorityName": null,
  "nature": "Aide en numéraire",
  "object": "",
  "paymentCondition": null,
  "paymentConditionDesc": null,
  "paymentId": "10000000000001-EJ00001-2022",
  "paymentPeriodDates": null,
  "pluriannual": false,
  "pluriannualYears": [
    2022,
    2023,
    2024,
    2025,
  ],
  "provider": "osiris",
  "requestYear": 2025,
  "requestedAmount": undefined,
  "scheme": undefined,
  "statusLabel": "NORMALIZED_LABEL",
  "subScheme": undefined,
  "subventionPercentage": null,
  "totalAmount": null,
  "ueNotification": null,
  "uniqueId": "osiris-DD71-24-0094-2022",
  "updateDate": 2025-01-01T00:00:00.000Z,
}
`;
